--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,14 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-
+    <meta name="Taktful" content="Full Stack contact manager application" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
+    <title>Taktful</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
